--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   firebase_core: ^2.31.0
   firebase_auth: ^4.18.0
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.2
+
+  # (Optional) สำหรับใช้งานรูปภาพ, ปุ่ม, ไอคอน เพิ่มเติม
+  image_picker: ^1.1.1       # ใช้เลือกรูปจากแกลเลอรี
+  firebase_storage: ^11.6.0  # ถ้าจะเก็บรูปโปรไฟล์บน Firebase (แนะนำ)
+  camera: ^0.10.5+9
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
